change new post view

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,17 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<% if logged_in? %>
+    <%= link_to 'Talk some trash anonymously', new_post_path %>
+    <%= link_to 'Sign out', logout_path, method: :delete %>
+<% end %>
+<ul>
+  <% @posts.each do |post| %>
+      <li>
+        <%= post.body %>
+      </li>
+      <% if logged_in? %>
+          <li>
+            <%= post.user.name %>
+          </li>
+      <% end %>
+  <% end %>
+</ul>
+
