--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,7 +3,7 @@
 
 <%= form_for @post do |f| %>
     <div>
-      <p><%= f.label :body %></p>
+      <p><%= f.label :body, "Talk some trash..." %></p>
       <%= f.text_area :body %>
     </div>
     <%= submit_tag %>
